@@ -50,6 +50,7 @@ version ?.??.?? (????-??-??):
   - userpanel: helpdesk: allow message add to closed tickets setting [chilan]
   - userpanel: helpdesk: limit ticket movements to selected queues setting [chilan]
   - support html mail send [chilan]
+  - messageadd: possibility of checking if customer consent is required [chilan]
 
 version 1.11.14 (2013-03-25):
 
